[build]

[project]
name = "teaspoon"
version = "1.3.7"
authors = [
  { name="Elizabeth Munch", email="muncheli@msu.edu" },
]
description = "A Topological Signal Processing Package"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = ["wheel",
                "cycler==0.11.0",
                "fonttools==4.34.4",
                "joblib==1.2.0",
                "kiwisolver==1.4.4",
                "matplotlib==3.5.2",
                "networkx==2.8.5",
                "numpy==1.23.1",
                "packaging==21.3",
                "Pillow==9.3.0",
                "POT==0.8.2",
                "pyentrp==0.7.1",
                "pyparsing==3.0.9",
                "python-dateutil==2.8.2",
                "scikit-learn==1.1.1",
                "scipy==1.8.1",
                "six==1.16.0",
                "sklearn==0.0",
                "threadpoolctl==3.1.0",
                "ripser==0.6.4", 
                "sympy==1.11.1",
                "sortedcontainers==2.4.0",
                "dionysus==2.0.8", 
                "pandas",
                "gudhi", 
                "pandoc"
            ]

[tool.setuptools.packages.find]
where = ["teaspoon"]

[project.urls]
repository = "https://github.com/TeaspoonTDA/teaspoon"
homepage = "https://github.com/TeaspoonTDA/teaspoon"
documentation = "https://teaspoontda.github.io/teaspoon/"

